--- a/server/templates/bands/login.html
+++ b/server/templates/bands/login.html
@@ -1,6 +1,23 @@
 {% extends "layout.html" %}
 {% block body %}
 <h2>Login</h2>
+<form method="POST" action="{{ url_for('bands.login') }}">
+    {{ loginForm.csrf_token }}
+    {{ loginForm.login.label }}<br/> {{ loginForm.login(size=20) }}
+    {% for error in loginForm.login.errors %}
+    <font color="red">{{error}}</font>
+    {% endfor %}
+    <br/>
+
+    {{ loginForm.password.label }}<br/> {{ loginForm.password(size=20) }}
+    {% for error in loginForm.password.errors %}
+    <font color="red">{{error}}</font>
+    {% endfor %}
+    <br/>
+
+    <input type="submit" value="Go">
+</form>
+
 <form method="POST" action="{{ url_for('bands.register') }}">
     {{ registerForm.csrf_token }}
     {{ registerForm.login.label }}<br/> {{ registerForm.login(size=20) }}<br/>
