[UPDATE/NEW] SERVER / CLIENT Änderungen
+ Views umgehängt
+ Statics geändert

--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tunefish</title>
-    <link href="{{ url_for('static', filename='css/style.css') }}" type="text/css"  rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/app.css') }}" type="text/css"  rel="stylesheet" />
 </head>
 <body>
     <div class="page">
