--- a/client/views/bands/loginAndRegister.html
+++ b/client/views/bands/loginAndRegister.html
@@ -2,8 +2,12 @@
 
 {% macro show_errors(field) %}
     {{ field.label }}<br/>
-    {{ field(size=20) }}<br/>
-
+        {% if field.errors %}
+            {{ field(size=20, class_='fail') }}
+        {% else %}
+            {{ field(size=20) }}
+        {% endif %}
+<br/>
 {% for error in field.errors %}
 <span style="color: red;">{{error}}</span><br/>
 {% endfor %}
