--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -9,8 +9,12 @@
 <form method="POST" action="{{ url_for('bands.profileGeneral') }}">
     {{ bandForm.csrf_token }}
     {{ renderDefault(bandForm.descp) }}
+    {{ renderDefault(bandForm.amount_members) }}
+    {{ bandForm.website.label }}
     http://{{ getField(bandForm.website) }}{{ getErrors(bandForm.website) }}
-    http://www.youtube.com/{{ getField(bandForm.youtube_id) }}{{ getErrors(bandForm.youtube_id) }}
+    {{ bandForm.youtube_id.label }}    http://www.youtube.com/{{ getField(bandForm.youtube_id) }}{{ getErrors(bandForm.youtube_id) }}
+    {{ bandForm.facebook_page.label }}    http://www.facebook.com/{{ getField(bandForm.facebook_page) }}{{ getErrors(bandForm.facebook_page) }}
+
     {{ renderDefault(bandForm.phone) }}
     {{ renderDefault(bandForm.city) }}
     <input type="submit" value="Bandinformationen vervollständigt">
