[UPDATE] Login Page

--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -9,10 +9,14 @@
 
 @import "base/main";
 @import "base/typography";
+@import "base/lists";
+@import "base/tabs";
+
 
 @import "base/header";
 @import "base/footer";
 
 @import "components/logo";
+@import "components/forms";
 
 @import "page/login";
