--- a/client/src/scss/base/_main.scss
+++ b/client/src/scss/base/_main.scss
@@ -12,7 +12,12 @@ body {
     color: $text-dark;
     margin: 0 auto;
     padding: 0;
+
+//    background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
+//    background-repeat: repeat-y;
+//    background-size: 100% 1.875rem;
 }
+
 
 .main-content {
 
