--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -29,7 +29,7 @@ h4 {
 
 p, ul, ol, pre, table, blockquote {
     margin-top: $base-line-height;
-    margin-bottom: $base-line-height * 2;
+    margin-bottom: $base-line-height;
 }
 
 /* Sanitation */
