--- a/client/src/scss/base/_variables.scss
+++ b/client/src/scss/base/_variables.scss
@@ -6,6 +6,19 @@ $text-light: $bg-sec;
 $text-dark: #333;
 
 
+
+/* PADDINGS */
+$pad: 1.25rem;
+$pad-half: 0.625rem;
+$pad-and-half: 1.875rem;
+
+/* SPACING */
+$space: 1.875rem;
+$space-half: $space / 2;
+$space-double: $space * 2;
+
+
+
 /* FONT */
 $font-family: "Source Sans Pro", Arial, sans-serif;
 
