--- a/client/src/scss/base/_footer.scss
+++ b/client/src/scss/base/_footer.scss
@@ -1,7 +1,7 @@
 footer {
 //    @include smallfont();
     text-align: center;
-    position: absolute;
+//    position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
