--- a/client/src/scss/base/_grid.scss
+++ b/client/src/scss/base/_grid.scss
@@ -16,6 +16,21 @@
     }
 }
 
+.grid-left {
+    justify-content: flex-start;
+    text-align: start;
+}
+
+.grid-center {
+    justify-content: center;
+    text-align: center;
+}
+
+.grid-end {
+    justify-content: flex-end;
+    text-align: end;
+}
+
 .grid--top {
     align-items: flex-start;
 }
@@ -24,7 +39,7 @@
     align-items: flex-end;
 }
 
-.grid--center {
+.grid--middle {
     align-items: center;
 }
 
@@ -36,7 +51,7 @@
     align-self: flex-end;
 }
 
-.grid-cell--center {
+.grid-cell--middle {
     align-self: center;
 }
 
@@ -57,8 +72,14 @@
     .#{$name}#{$sep}grid--1of3 > .grid-cell {
         flex: 0 0 33.3333%
     }
+    .#{$name}#{$sep}grid--2of3 > .grid-cell {
+        flex: 0 0 66.6666%
+    }
     .#{$name}#{$sep}grid--1of4 > .grid-cell {
         flex: 0 0 25%
+    }
+    .#{$name}#{$sep}grid--3of4 > .grid-cell {
+        flex: 0 0 75%
     }
 }
 
