--- a/client/src/scss/components/_logo.scss
+++ b/client/src/scss/components/_logo.scss
@@ -46,7 +46,7 @@
 
     span {
         line-height: $base-line-height * 2;
-        padding: 0 30px 0 20px;
+        padding: 0 $pad-and-half 0 $pad-half;
     }
 
     &:hover {
