--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,12 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
+<head lang="de">
+    <meta charset="UTF-8">
     <title>Tunefish</title>
-    <link href="{{ url_for('static', filename='css/app.css') }}" type="text/css"  rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/app.min.css') }}" type="text/css"  rel="stylesheet" />
+
+    <!-- WEBFONT CACHING -->
+    <script>
+        (function(){
+            function addFont() {
+                var style = document.createElement('style');
+                style.rel = 'stylesheet';
+                document.head.appendChild(style);
+                style.textContent = localStorage.sourceSansPro;
+            }
+
+            try {
+//                window.localStorage.clear();
+                if (localStorage.sourceSansPro) {
+                    // The font is in localStorage, we can load it directly
+                    addFont();
+                } else {
+                    // We have to first load the font file asynchronously
+                    var request = new XMLHttpRequest();
+                    request.open('GET', '{{ url_for('static', filename='css/source-sans-pro.min.css') }}', true);
+
+                    request.onload = function() {
+                        if (request.status >= 200 && request.status < 400) {
+                            // We save the file in localStorage
+                            localStorage.sourceSansPro = request.responseText;
+
+                            // ... and load the font
+                            addFont();
+                        }
+                    };
+
+                    request.send();
+                }
+            } catch(ex) {
+                // maybe load the font synchronously for woff-capable browsers
+                // to avoid blinking on every request when localStorage is not available
+            }
+        }());
+    </script>
+    <!-- END WEBFONT CACHING -->
+
 </head>
 <body>
     <div class="page">
         {% block body %}{% endblock %}
     </div>
+
+    <footer>
+        &copy;2014 - Wohnpark am Fleet e.V.
+    </footer>
 </body>
 </html>
