Use flash messages to give a feedback to the user

--- a/client/views/_formhelpers.html
+++ b/client/views/_formhelpers.html
@@ -22,3 +22,10 @@
     {{ getErrors(field) }}
 <br/>
 {% endmacro %}
+
+
+{% macro renderMessages() %}
+    {% for category, message in get_flashed_messages(with_categories=true) %}
+        <div class="{{category}}">{{message}}</div>
+    {% endfor %}
+{% endmacro %}
