--- a/client/src/scss/base/_footer.scss
+++ b/client/src/scss/base/_footer.scss
@@ -1,10 +1,14 @@
+.footer-push {
+    clear:both;
+    height:92px; // the height of our footer + margin
+}
+
 footer {
 //    @include smallfont();
     text-align: center;
-//    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
     padding: 1rem;
     background-color: #fff;
+
+    margin-top:$space;
+    height:62px;
 }
