--- a/client/src/scss/base/_header.scss
+++ b/client/src/scss/base/_header.scss
@@ -4,6 +4,11 @@ header {
     height: $base-line-height * 2;
     padding: 0 $pad;
     border-bottom: 1px solid #efefef;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 //
 //    box-shadow: 0 0 5px 5px rgba($shadow-dark, 0.5);
 }
