--- a/client/src/scss/base/_variables.scss
+++ b/client/src/scss/base/_variables.scss
@@ -5,16 +5,21 @@ $bg-sec: #34495E;
 $text-light: $bg-sec;
 $text-dark: #333;
 
+$error: #E74C3C;
 
+/* GRID */
+$grid-padding: 2rem;
+$grid-gutter: 2rem;
 
 /* PADDINGS */
 $pad: 1.25rem;
-$pad-half: 0.625rem;
-$pad-and-half: 1.875rem;
+$pad-half: $pad / 2;
+$pad-and-half: $pad * 1.5;
 
 /* SPACING */
-$space: 1.875rem;
+$space: 1.625rem;
 $space-half: $space / 2;
+$space-and-half: $space * 1.5;
 $space-double: $space * 2;
 
 
@@ -22,33 +27,33 @@ $space-double: $space * 2;
 /* FONT */
 $font-family: "Source Sans Pro", Arial, sans-serif;
 
-$base-font-size: 1.125rem;
-$base-line-height: 1.875rem;
+$base-font-size: 1rem;
+$base-line-height: 1.625rem;
 $measure: 768px;
 
-$h1-font-size: 4.75rem;
-$h1-line: 1.875rem;
+$h1-font-size: 4.25rem;
+$h1-line: 1.625rem;
 $h1-lines: 3;
 $h1-line-height: $h1-line * $h1-lines;
 $h1-margin-top: 2 * $h1-line;
 $h1-margin-bottom: 1 * $h1-line;
 
-$h2-font-size: 2.9375rem;
-$h2-line: 1.875rem;
+$h2-font-size: 2.625rem;
+$h2-line: 1.625rem;
 $h2-lines: 2;
 $h2-line-height: $h2-line * $h2-lines;
 $h2-margin-top: 2 * $h2-line;
 $h2-margin-bottom: 1 * $h2-line;
 
-$h3-font-size: 1.8125rem;
-$h3-line: 1.875rem;
+$h3-font-size: 1.625rem;
+$h3-line: 1.625rem;
 $h3-lines: 1;
 $h3-line-height: $h3-line * $h3-lines;
 $h3-margin-top: 1 * $h3-line;
 $h3-margin-bottom: 1 * $h3-line;
 
-$h4-font-size: 1.8125rem;
-$h4-line: 1.875rem;
+$h4-font-size: 1.625rem;
+$h4-line: 1.625rem;
 $h4-lines: 1;
 $h4-line-height: $h4-line * $h4-lines;
 $h4-margin-top: 1 * $h4-line;
