--- a/client/views/_formhelpers.html
+++ b/client/views/_formhelpers.html
@@ -1,24 +1,24 @@
 
 {% macro getField(field, placeholder = '') %}
-    {% if field.errors %}
-        {{ field(size=20, class_='fail', placeholder=placeholder) }}
-    {% else %}
-        {{ field(size=20, placeholder=placeholder) }}
-    {% endif %}
+{% if field.errors %}
+{% for error in field.errors %}
+{{ field(size=20, class_='fail', value='', placeholder=error) }}
+{% endfor %}
+{% else %}
+{{ field(size=20, placeholder=placeholder) }}
+{% endif %}
 {% endmacro %}
 
 
-{% macro getErrors(field) %}
-    {% for error in field.errors %}
-       <span style="color: red;">{{error}}</span>
-    {% endfor %}
-    <br/>
-{% endmacro %}
+<!--{% macro getErrors(field) %}-->
+    <!--{% for error in field.errors %}-->
+       <!--<span style="color: red;">{{error}}</span>-->
+    <!--{% endfor %}-->
+<!--{% endmacro %}-->
 
 
 {% macro renderDefault(field, placeholder='') %}
     {{ field.label }}
     {{ getField(field, placeholder) }}
-    {{ getErrors(field) }}
-<br/>
+    <!--{{ getErrors(field) }}-->
 {% endmacro %}
