--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -89,6 +89,7 @@
     </footer>
 
     <script src="{{ url_for('static', filename='js/vendor/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/lib/helpers.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
