--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -10,7 +10,7 @@
     <link href="{{ url_for('static', filename='css/app.min.css') }}" type="text/css" rel="stylesheet"/>
 
     <!-- WEBFONT CACHING -->
-    <script>
+    <script type="text/javascript">
         (function () {
             function addFont() {
                 var style = document.createElement('style');
@@ -27,13 +27,7 @@
                 } else {
                     // We have to first load the font file asynchronously
                     var request = new XMLHttpRequest();
-                    request.open('GET', '{{ url_for('
-                    static
-                    ', filename='
-                    css / source - sans - pro.min.css
-                    ') }}', true
-                )
-                    ;
+                    request.open('GET', '{{ url_for('static', filename='css/source-sans-pro.min.css') }}', true);
 
                     request.onload = function () {
                         if (request.status >= 200 && request.status < 400) {
