--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -8,7 +8,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('form').submit(function (e) {
+        $('#band_form').submit(function (e) {
             e.preventDefault();
 
             $.post(this.action, $(this).serialize(),function (data) {
@@ -17,6 +17,27 @@
                         console.log("fail", data.responseJSON);
                     });
         });
+
+        $('#track_form').submit(function (e) {
+            e.preventDefault();
+
+            $.ajax({
+                url: this.action,
+                type: 'POST',
+                data:  new FormData(this),
+                mimeType:"multipart/form-data",
+                contentType: false,
+                cache: false,
+                dataType: 'json',
+                processData:false,
+                'success': function (data) {
+                    $("#track_list ul").append(data['track'])
+                }
+            }).fail(function (data) {
+                console.log("fail", data.responseJSON);
+            });
+        });
+
     });
 </script>
 {% endblock %}
@@ -27,7 +48,7 @@
 
 <h2>Tab 1: Allg Bandinfos</h2>
 
-<form method="POST" action="{{ url_for('bands.profile.update') }}">
+<form method="POST" action="{{ url_for('bands.profile.update') }}" id="band_form">
     {{ band_form.csrf_token }}
     {{ renderDefault(band_form.name) }}
     {{ renderDefault(band_form.descp) }}
@@ -48,21 +69,16 @@
 <h2>Tab 2: Tracks</h2>
 
 <h3>Bisher hochgeladen</h3>
-{% if tracks %}
+<div id="track_list">
 <ul>
-    {% for track in tracks %}
-    <li>
-        {{track.trackname}}
-        <a href="{{ url_for('bands.tracks.delete', track_id=track.id) }}">[x]</a>
-        <audio src="{{track.url}}" controls></audio>
-
-    </li>
+    {% for track in g.band.tracks %}
+        {% include "track_item.html" %}
     {% endfor %}
 </ul>
-{% endif %}
+</div>
 
 
-<form method="POST" action="{{ url_for('bands.tracks.upload') }}" enctype="multipart/form-data">
+<form method="POST" action="{{ url_for('bands.tracks.upload') }}" enctype="multipart/form-data" id="track_form">
     {{ track_form.csrf_token }}
 
     {{ renderDefault(track_form.audioFile) }}
