--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -7,48 +7,67 @@
 {% block inlinejs %}
 
 <script type="text/javascript">
+    var upload = function (form, onSuccess, onFailure) {
+        $.ajax({
+            url: form.action,
+            type: 'POST',
+            data: new FormData(form),
+            mimeType: "multipart/form-data",
+            contentType: false,
+            cache: false,
+            dataType: 'json',
+            processData: false,
+            'success': onSuccess
+        }).fail(function (data) {
+                    onFailure(data.responseJSON.errors);
+                });
+    }
+
+    var submit = function (form, onSuccess, onFailure) {
+        $.post(form.action, $(form).serialize(), onSuccess).fail(function (data) {
+            onFailure(data.responseJSON.errors);
+        });
+    }
+
+    var linkAjaxPostHandler = function(onSuccess) {
+        return function (e) {
+            e.preventDefault();
+            var target = $(e.target);
+            $.post(e.target.href, function(data) {
+                onSuccess(target, data);
+            });
+        }
+    }
+
 
     $(document).ready(function () {
-        var onTrackDeleteClick = function (e) {
-            e.preventDefault();
-            var li = $(e.target).parent();
-
-            $.post(e.target.href, function (data) {
-                li.fadeOut(500);
-            });
-        };
+        var onTrackDeleteClick = linkAjaxPostHandler(function (target) {
+            target.parent().fadeOut(500);
+        });
 
 
         $('#band_form').submit(function (e) {
             e.preventDefault();
 
-            $.post(this.action, $(this).serialize(),function (data) {
-                console.log("success", data);
-            }).fail(function (data) {
-                        console.log("fail", data.responseJSON);
-                    });
+            submit(this,
+                    function (result) { console.log("ok"); },
+                    function (errors) { console.log("errors", errors); }
+            );
+
         });
 
         $('#track_form').submit(function (e) {
             e.preventDefault();
 
-            $.ajax({
-                url: this.action,
-                type: 'POST',
-                data:  new FormData(this),
-                mimeType:"multipart/form-data",
-                contentType: false,
-                cache: false,
-                dataType: 'json',
-                processData:false,
-                'success': function (data) {
-                    $("#track_list ul")
-                            .append(data['track'])
-                            .click(onTrackDeleteClick);
-                }
-            }).fail(function (data) {
-                console.log("fail", data.responseJSON);
-            });
+            upload(this,
+                    function (result) {
+                        $("#track_list ul").append(result['track']).click(onTrackDeleteClick);
+                    },
+                    function (errors) {
+                        console.log("errors", errors);
+                    }
+                );
+
         });
 
         $('#track_list a').click(onTrackDeleteClick);
@@ -85,11 +104,11 @@
 
 <h3>Bisher hochgeladen</h3>
 <div id="track_list">
-<ul>
-    {% for track in g.band.tracks %}
+    <ul>
+        {% for track in g.band.tracks %}
         {% include "track_item.html" %}
-    {% endfor %}
-</ul>
+        {% endfor %}
+    </ul>
 </div>
 
 
