--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -7,13 +7,13 @@
 <h2>Tab 3: Image</h2>
 
 <h3>Aktuelles Bild</h3>
-<div id="track_list">
+<div id="image">
     {% if g.band.image %}
-    <img src="{{g.band.image_url }}" />
+    {% include "image_preview.html" %}
     {% endif %}
 </div>
 
-<form method="POST" action="{{ url_for('bands.images.upload') }}" enctype="multipart/form-data" id="track_form">
+<form method="POST" action="{{ url_for('bands.images.upload') }}" enctype="multipart/form-data" id="image_form">
     {{ image_form.csrf_token }}
     {{ renderDefault(image_form.image_file) }}
     <input type="submit" value="Bild aktualisieren">
