Implement a very simple error & success message handling that is global for the page

--- a/client/views/bands/main.html
+++ b/client/views/bands/main.html
@@ -11,6 +11,10 @@
 {% block body %}
 {{ renderMessages() }}
 
+<div id="messages">
+
+</div>
+
 {% include "profile.html" %}
 <hr/>
 {% include "tracks.html" %}
