--- a/client/views/bands/main.html
+++ b/client/views/bands/main.html
@@ -29,6 +29,6 @@
     <div>{% include "tracks.html" %}</div>
     <div>{% include "image.html" %}</div>
     <div>{% include "techrider.html" %}</div>
-    <div>{% include "check.html" %}</div>
+    <div id="summary">{% include "check.html" %}</div>
 </div>
 {% endblock %}
