--- a/client/views/bands/main.html
+++ b/client/views/bands/main.html
@@ -15,16 +15,19 @@
 <div id="messages">
 
 </div>
+
+<br />
+
 <div class="tabctrl">
-    <ul>
-        <li><a href="#" data-index="1">Allgemein</a></li>
+    <ul class="tabs">
+        <li><a href="#" data-index="1" class="active">Allgemein</a></li>
         <li><a href="#" data-index="2">Tracks</a></li>
         <li><a href="#" data-index="3">Image</a></li>
         <li><a href="#" data-index="4">Tech</a></li>
         <li><a href="#" data-index="5">Summary and submit</a></li>
     </ul>
 </div>
-<div class="tabs">
+<div class="tabs active">
     <div>{% include "profile.html" %}</div>
     <div>{% include "tracks.html" %}</div>
     <div>{% include "image.html" %}</div>
