--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -13,7 +13,7 @@
     {% endif %}
 </div>
 
-<form method="POST" action="{{ url_for('bands.images.upload') }}" enctype="multipart/form-data" id="image_form">
+<form method="POST" action="{{ url_for('bands.image.upload') }}" enctype="multipart/form-data" id="image_form">
     {{ image_form.csrf_token }}
     {{ renderDefault(image_form.image_file) }}
     <input type="submit" value="Bild aktualisieren">
