Submit-Button only visible if band is ready for submit

--- a/client/views/bands/check.html
+++ b/client/views/bands/check.html
@@ -51,4 +51,8 @@
     </tr>
 </table>
 
-<a href="{{ url_for('bands.profile.submit') }}">Abschließen</a>
+{% if g.band.is_ready_for_submit %}
+<a href="{{ url_for('bands.profile.submit') }}" class="info">Abschließen</a>
+{% else %}
+<div class="error">Du kommst hier nicht rein</div>
+{% endif %}
